force-app/main/default/objects/Archived_File__c/Archived_File__c.object-meta.xml
<CustomObject>
    <label>Archived_File</label>
    <nameField>
        <displayFormat>AF-{0000000000}</displayFormat>
        <label>Archived_File Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Archived_Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>