force-app/main/default/objects/Archived_File__c/fields/LastRestored__c.field-meta.xml
<CustomField>
    <fullName>LastRestored__c</fullName>
    <label>LastRestored</label>
    <type>DateTime</type>
</CustomField>