force-app/main/default/objects/Archived_File__c/fields/OriginalFileId__c.field-meta.xml
<CustomField>
    <fullName>OriginalFileId__c</fullName>
    <label>OriginalFileId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>