force-app/main/default/objects/Archived_File__c/fields/S3Url__c.field-meta.xml
<CustomField>
    <fullName>S3Url__c</fullName>
    <label>S3Url</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>